x540-nic code cleanup

--- a/drivers/x540-nic/config.xml.tmpl
+++ b/drivers/x540-nic/config.xml.tmpl
@@ -15,34 +15,34 @@
 
 
   <!-- MEMORY AND ALLOCATOR QUOTA -->
-  <shm_max_size>80</shm_max_size>                                  <!-- maximum size of shared memory in GB. -->
-  <frame_num_per_core>1024000</frame_num_per_core>
-  <jd_num_per_core>1024000</jd_num_per_core>
+  <shm_max_size>2</shm_max_size>                                  <!-- maximum size of shared memory in GB. -->
+  <frame_num_per_core>10240</frame_num_per_core>
+  <jd_num_per_core>1024</jd_num_per_core>
   <mbuf_num_per_core>10240</mbuf_num_per_core>
   <meta_data_num_per_core>10240</meta_data_num_per_core>
-  <pbuf_num_per_core>1024000</pbuf_num_per_core>
-  <net_header_num_per_core>1024000</net_header_num_per_core>
+  <pbuf_num_per_core>10240</pbuf_num_per_core>
+  <net_header_num_per_core>10240</net_header_num_per_core>
   <ip_reass_num_per_core>10240</ip_reass_num_per_core>
   <udp_pcb_num_per_core>1024</udp_pcb_num_per_core>
 
 
 
   <!-- PLATFORM AND DRIVER CONFIG -->
-  <channels_per_nic>5</channels_per_nic>                           <!-- same as in driver_config.h. -->
+  <channels_per_nic>1</channels_per_nic>                           <!-- same as in driver_config.h. -->
   <channel_size>1024</channel_size>                                <!-- same as in driver_config.h. -->                             
   <tx_desc_per_queue>512</tx_desc_per_queue>                       <!-- same as in driver_config.h. -->
   <rx_desc_per_queue>512</rx_desc_per_queue>                       <!-- same as in driver_config.h. -->
-  <nic_num>4</nic_num>                                             
-  <cpus_per_nic>16</cpus_per_nic>                                  
-  <rx_threads_cpu_mask>0001001001001001</rx_threads_cpu_mask>
-  <tx_threads_cpu_mask>0100100100100100</tx_threads_cpu_mask>
+  <nic_num>1</nic_num>                                             
+  <cpus_per_nic>4</cpus_per_nic>                                  
+  <rx_threads_cpu_mask>0001</rx_threads_cpu_mask>
+  <tx_threads_cpu_mask>1000</tx_threads_cpu_mask>
   <flex_byte_pos>24</flex_byte_pos>
 
 
 
   <!-- APPLICATION CONFIG -->
   <stats_num>1000000</stats_num>
-  <client_rx_flow_num>4</client_rx_flow_num>
+  <client_rx_flow_num>1</client_rx_flow_num>
   <eviction_period>10</eviction_period>
   <server_port>11211</server_port>
   <server_ip1>10.0.0.1</server_ip1>
