--- a/drivers/x540-nic/config.xml.tmpl
+++ b/drivers/x540-nic/config.xml.tmpl
@@ -1,21 +1,16 @@
 <?xml version="1.0" ?>
 
 <!-- 
-    1. This config file contains major parameters for x540 driver and TeraCache app.
-       config.xml.tmpl is a sample file for beast server configuration.
+    1. This config file contains major parameters for x540 driver and server app.
 
-    2. The old driver_config.h is still needed for now. Please make sure the macros 
-       defined in driver_config.h match those defined in this file. 
-
-    3. All numbers should be configured carefully based on your target platform.
+    2. All numbers should be configured carefully based on your target platform.
        Make sure combined allocator quota does not exceed memory size.
 -->
 
 <x540_driver>
 
-
   <!-- MEMORY AND ALLOCATOR QUOTA -->
-  <shm_max_size>2</shm_max_size>                                  <!-- maximum size of shared memory in GB. -->
+  <shm_max_size>4</shm_max_size>                                  <!-- maximum size of shared memory in GB. -->
   <frame_num_per_core>10240</frame_num_per_core>
   <jd_num_per_core>1024</jd_num_per_core>
   <mbuf_num_per_core>10240</mbuf_num_per_core>
@@ -25,20 +20,16 @@
   <ip_reass_num_per_core>10240</ip_reass_num_per_core>
   <udp_pcb_num_per_core>1024</udp_pcb_num_per_core>
 
-
-
   <!-- PLATFORM AND DRIVER CONFIG -->
-  <channels_per_nic>1</channels_per_nic>                           <!-- same as in driver_config.h. -->
+  <channels_per_nic>4</channels_per_nic>                           <!-- same as in driver_config.h. -->
   <channel_size>1024</channel_size>                                <!-- same as in driver_config.h. -->                             
   <tx_desc_per_queue>512</tx_desc_per_queue>                       <!-- same as in driver_config.h. -->
   <rx_desc_per_queue>512</rx_desc_per_queue>                       <!-- same as in driver_config.h. -->
   <nic_num>1</nic_num>                                             
   <cpus_per_nic>8</cpus_per_nic>                                  
-  <rx_threads_cpu_mask>00000001</rx_threads_cpu_mask>
-  <tx_threads_cpu_mask>00001000</tx_threads_cpu_mask>
+  <rx_threads_cpu_mask>00001111</rx_threads_cpu_mask>
+  <tx_threads_cpu_mask>11110000</tx_threads_cpu_mask>
   <flex_byte_pos>24</flex_byte_pos>
-
-
 
   <!-- APPLICATION CONFIG -->
   <stats_num>1000000</stats_num>
@@ -58,6 +49,5 @@
    SERVER_TIMESTAMP 2 (6 timestamps to breakdown in fine granularity)
   -->
   <server_timestamp>1</server_timestamp>
-
 
 </x540_driver>
